--- a/public/styles.css
+++ b/public/styles.css
@@ -191,3 +191,8 @@ input[type=file], select {
     cursor: pointer;
     box-sizing: border-box;
 }
+
+.error {
+    text-align: center;
+    color: red;
+}
